# service_for_load_testing

./: .dockerignore  Dockerfile  Exercise.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/controller/: routes.py
