[tool.poetry]
name = "service-for-load-testing"
version = "0.1.0"
description = ""
authors = ["RuslanUsmanov <usmanovruslan322@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

